# citadel

./: .env.example  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  LICENSING.md  Makefile  README.md  ROADMAP.legacy.md  ROADMAP.md  SECURITY.md  config.json.example  conftest.py  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  foctl  manage_users.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml
api/: Dockerfile  agg_rules.py  brick.yaml  config.py  conftest.py  db.py  logging_config.py  main.py  manage_users.py  plugin_loader.py  pyproject.toml  redis_keys.py  requirements.txt  test_agg_rules.py  test_app_smoke.py  test_sigma_settings.py  test_storage.py  test_storage_reconcile.py
api/auth/: dependencies.py  rbac.py  service.py  test_access_control.py  test_rbac_model.py  test_service.py
api/license/: __init__.py  client.py  gate.py  models.py  router.py
api/models/: __init__.py  evidence_seal_anchor.py
api/modules_registry/: auth_summary.yaml  browser_report.yaml  bulk_extractor.yaml  chainsaw.yaml  cti_match.yaml  cuckoo.yaml  evtxecmd.yaml  hayabusa.yaml  hindsight.yaml  network_summary.yaml  rare_process.yaml  regripper.yaml  volatility3.yaml  wintriage.yaml  yara.yaml
api/routers/: admin_dead_letter.py  admin_logs.py  admin_utils.py  alert_rules.py  anomaly.py  audit.py  auth.py  baseline.py  case_files.py  case_templates.py  cases.py  collab.py  collector.py  companies.py  cti.py  editor.py  entity_graph.py  evidence_seal.py  export.py  findings.py  global_alert_rules.py  groups.py  harvest.py  health.py  ingest.py  internal_chain.py  jobs.py  killchain.py  llm_config.py  metrics.py  modules.py  notes.py  pilot_memory.py  pilot_settings.py  platform_settings.py  plugins.py  process_tree.py  reports.py  s3_integration.py  saved_searches.py  (+25 more)
api/services/: alert_triage.py  audit.py  baseline.py  cases.py  celery_dispatch.py  dead_letter.py  elasticsearch.py  entity_graph.py  evidence_seal.py  findings.py  jobs.py  killchain.py  module_runs.py  pilot_memory.py  python_embeds.py  redis_mutate.py  (+16 more)
config/: resources.yaml
contracts/: README.md  brick.schema.json  bundle_manifest.schema.json  bus_topics.md  collector.proto  ecs_extension.md  forensic_event.schema.json
docs/: DEPLOY.md  architecture.md  contracts.md  contributing.md  getting-started.md  index.md  installation.md  licensing.md  operations.md  requirements.txt  roadmap.md  testing.md  tools.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
k8s/: image-pruner-cronjob.yaml  middleware-no-buffering.yaml  namespace.yaml  traefik-config-updated.yaml  traefik-timeouts.yaml
nginx/: nginx.prod.conf
scripts/: allocate_resources.py  contracts_codegen.py  fetch_tools.sh  run_tests.sh  split_tools.sh
test_samples/: README.md  generate_all_text_logs.py  generate_test_data.py
tests/: test_ecs_export_contract.py  test_foctl_redis_auth.py  test_normalize_properties.py  test_stix_export_contract.py
tools/: README.md  SUITE.yaml  versions.yaml
tools/augur/: README.md  brick.yaml  capabilities.yaml  pyproject.toml
tools/augur/augur/: __init__.py  cache.py  cli.py  enricher.py  io.py  misp.py  models.py  scoring.py  stix.py
tools/augur/augur/sources/: __init__.py  abuseipdb.py  base.py  greynoise.py  otx.py  shodan.py  urlhaus.py
tools/augur/tests/: conftest.py  test_enricher_cli.py  test_phase2_close.py  test_scoring.py  test_sources.py  test_stix.py
tools/citadel_contracts/: README.md  __init__.py  capabilities.py  finding.py  logship.py  mapping.py  module.py  parser.py  pyproject.toml  redis_conn.py  sdk.py  test_validator.py  validator.py
tools/pilot/: README.md  brick.yaml  capabilities.yaml  pyproject.toml
tools/pilot/pilot/: __init__.py  service.py
tools/rosetta/: README.md  brick.yaml  capabilities.yaml  pyproject.toml
tools/rosetta/examples/: sample.jsonl
tools/rosetta/rosetta/: __init__.py  cli.py  daemon.py  enrich.py  normalize.py
tools/rosetta/rosetta/fieldmaps/: default.yaml
tools/rosetta/tests/: test_daemon.py  test_enrich.py  test_normalize.py
tools/scribe/: README.md  brick.yaml  capabilities.yaml  pyproject.toml
tools/scribe/scribe/: __init__.py  document.py  docx_render.py  labels.py  render.py
tools/scribe/tests/: test_render.py
tools/talon/: .gitignore  README.md  agent_client.py  artifact_collector.py  brick.yaml  build.bat  build.sh  capabilities.yaml  collect.py  collector_server.py  crypto.py  fo_uploader.py  generate_stubs.sh  pyproject.toml  requirements-build.txt  secure_upload.py
tools/talon/tests/: test_chunker.py  test_secure_upload.py  test_stability.py
(+409 files in other folders)
