[project]
name = "citadel"
version = "1.0.0"
description = "Citadel — a DFIR platform built from standalone tools"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Citadel" },
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Cookiecutter templates contain {{...}} placeholders that are intentionally not
# valid Python/YAML; never lint them. Also skip vendored/build dirs.
extend-exclude = [
    "**/template/**",
    "tools/babel/template",
    ".venv", "node_modules", "**/dist/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "B011"]
"**/test_*.py" = ["E501", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ['/template/', '\.venv', 'node_modules']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api", "tools", "tests"]
addopts = "-q"

[tool.coverage.run]
source = ["api", "tools/sluice-worker", "tools/talon", "tools/babel", "tools/anvil"]
