[project]
name = "talon"
version = "1.0.0"
description = "Citadel collector (Talon) — endpoint artifact collection"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Citadel" },
]
# runtime deps tracked in requirements-build.txt
dependencies = []

[project.scripts]
talon = "collect:main"
